--- a/my-app/backend/Dockerfile
+++ b/my-app/backend/Dockerfile
@@ -1,39 +1,15 @@
-# syntax = docker/dockerfile:1
+FROM node:20-alpine AS deps
+WORKDIR /usr/src/app
 
-# Adjust NODE_VERSION as desired
-ARG NODE_VERSION=20.19.5
-FROM node:${NODE_VERSION}-slim AS base
+COPY package*.json ./
+RUN npm ci --omit=dev
 
-LABEL fly_launch_runtime="Node.js"
+FROM node:20-alpine
+WORKDIR /usr/src/app
+ENV NODE_ENV=production
 
-# Node.js app lives here
-WORKDIR /app
-
-# Set production environment
-ENV NODE_ENV="production"
-
-
-# Throw-away build stage to reduce size of final image
-FROM base AS build
-
-# Install packages needed to build node modules
-RUN apt-get update -qq && \
-    apt-get install --no-install-recommends -y build-essential node-gyp pkg-config python-is-python3
-
-# Install node modules
-COPY package-lock.json package.json ./
-RUN npm ci
-
-# Copy application code
+COPY --from=deps /usr/src/app/node_modules ./node_modules
 COPY . .
 
-
-# Final stage for app image
-FROM base
-
-# Copy built application
-COPY --from=build /app /app
-
-# Start the server by default, this can be overwritten at runtime
-EXPOSE 3000
-CMD [ "npm", "run", "start" ]
+EXPOSE 3003
+CMD ["npm", "run", "start"]
